chore: seed init needed data to db
