# src/docs/swagger.json
@@ -316,12 +316,6 @@
         "models.SignUpDTO": {
             "type": "object",
             "properties": {
-                "RealmRoles": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "email": {
                     "type": "string"
                 },
@@ -333,6 +327,12 @@
                 },
                 "password": {
                     "type": "string"
+                },
+                "realmRoles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "username": {
                     "type": "string"
